<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Password Manager</string>
    
    <!-- Login and registration -->
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account">Create Account</string>
    <string name="login_subtitle">Secure your passwords</string>
    <string name="register_subtitle">Create a new account</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="back">Back</string>
    <string name="account">Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="sign_out_confirmation">Are you sure you want to sign out?</string>
    <string name="sign_out_success">Signed out successfully</string>
    
    <!-- Messages -->
    <string name="fill_all_fields">Please fill all fields</string>
    <string name="invalid_credentials">Invalid credentials</string>
    <string name="registration_successful">Registration successful</string>
    <string name="username_exists">Username already exists</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="password_saved">Password saved successfully</string>
    <string name="no_passwords">No passwords saved yet</string>
    
    <!-- Password Management -->
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="add_password">Add Password</string>
    <string name="action_add">Add Password</string>
    <string name="name">Name</string>
    <string name="password_name">Password Name</string>
    <string name="title">Title</string>
    <string name="ok">OK</string>
    <string name="copy">Copy</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="tap_to_reveal">Tap to reveal password</string>
    
    <!-- Navigation -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    
    <!-- Behavior -->
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    
    <!-- New strings -->
    <string name="add_new_password">Add New Password</string>
    <string name="creator">OPH</string>
    <string name="more_options">More Options</string>
    <string name="password_options">Password Options</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="edit_password">Edit Password</string>
    <string name="password_updated">Password updated successfully</string>
    <string name="password_deleted">Password deleted successfully</string>
    <string name="confirm_delete">Confirm Delete</string>
    <string name="confirm_delete_message">Are you sure you want to delete the password for %1$s?</string>
    <string name="generate_password">Generate Strong Password</string>
</resources>